--- a/css/style.css
+++ b/css/style.css
@@ -80,36 +80,42 @@ ul {
 
 /* End Global Rules */
 
-/* Start Scroll top */
-.scrolltop {
+/* Start Scroll Top */
+#back-to-top {
   position: fixed;
-  right: 1rem;
-  bottom: -20%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 0.3rem;
-  background: rgba(6, 156, 84, 0.5);
-  border-radius: 0.4rem;
-  z-index: 100;
-  transition: 0.4s;
+  bottom: 20px;
+  right: 25px;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  background: rgba(6,156,84,.5);
   visibility: hidden;
+  cursor: pointer;
+  -webkit-transition: all 0.2s ease;
+  transition: all 0.3s ease;
+  z-index: 100;
 }
-
-.scrolltop:hover {
-  background-color: var(--permery-color);
+#back-to-top::after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 0;
+  right: 0;
+  margin: -4px auto;
+  width: 12px;
+  height: 12px;
+  border-top: 3px solid var(--bg-color);
+  border-right: 3px solid var(--bg-color);
+  -webkit-transform: rotate(-45deg);
+  transform: rotate(-45deg);
 }
-
-.scrolltop__icon {
-  font-size: 1.8rem;
-  color: var(--bg-color);
+#back-to-top:hover {
+  background: var(--permery-color);
 }
-
-/* Show scrolltop */
-.show-scroll {
-  visibility: visible;
-  bottom: 1.5rem;
+#back-to-top:hover::after {
+  border-color: var(--text-color2);
 }
+/* End Scroll Top */
 
 /* Start Header */
 header {
@@ -492,7 +498,7 @@ header #menu span {
 }
 /* End burger Menu */
 
-/* Start Animation Section */
+/* Start Animation Section Reveal */
 .reveal {
   position: relative;
   transform: translateY(150px);
@@ -503,7 +509,7 @@ header #menu span {
   transform: translateY(0);
   opacity: 1;
 }
-/* End Animation Section */
+/* End Animation Section Reveal */
 
 /* Start MEDIA QUERIES */
 @media (max-width: 767px) {
